Now sensor endpoints store sensed data in the data base
Additionally there are two sensor endpoint modes, immediate and interval.
