# docs/swagger.json
@@ -132,6 +132,14 @@
         "manufacturer.SensedPropertiesDTO": {
             "type": "object",
             "properties": {
+                "intervalTime": {
+                    "type": "integer",
+                    "default": 10
+                },
+                "sensorEndpointMode": {
+                    "type": "string",
+                    "default": "INTERVAL_RETRIVAL"
+                },
                 "serviceDefinition": {
                     "type": "string",
                     "default": "temperature"
